Massive quick addition of a portfolio section. Will likely need some style edits later, but for now it works.

--- a/index.html
+++ b/index.html
@@ -275,15 +275,129 @@
 			</div>
 			<!-- end #resume -->
 
-			<!-- begin #about but label it portfolio for fun! -->
+						<!-- begin #portfolio -->
 			<div id="portfolio" class="absolute">
 				<div id="top-portfolio" class="expand add-expand">
+					<h1>Portfolio</h1>
+					<div class="detail">See My Projects</div>
+					<div class="icon icon-left fa fa-briefcase"></div>
+				</div>
+				<div class="main-content">
+					<a href="#top-portfolio" class="close-icon expand"></a>
+					<h1 class="title">My Portfolio</h1>
+						<ul id="filter">
+							<li><a class="active" href="#" data-group="all">All</a></li>
+							<li><a href="#" data-group="design">Design</a></li>
+							<li><a href="#" data-group="website">Website</a></li>
+							<li><a href="#" data-group="video">Video</a></li>
+							<li><a href="#" data-group="audio">Audio</a></li>
+							<li><a href="#" data-group="writing">Writing</a></li>
+						</ul>
+
+						<div id="portfolio-container">
+
+							<div class="portfolio-item" data-groups='["all", "design"]'>
+								<a class="overlay" href="img/portfolio/hammer.png">
+									<h1>Hammer</h1>
+									<h4>A simple graphic about why creatives are the hammer of an agency.</h4>
+								</a>
+								<img style="width:400px;" src="img/portfolio/hammer.png" alt="Hammer.png">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "writing"]'>
+								<a class="overlay" href="https://medium.com/@thatotherzach/unexpected-encounters-679756eb7f31#.j6bodg5rk">
+									<h1>Unexpected Encounters</h1>
+									<h4>A short story I wrote.</h4>
+								</a>
+								<img style="width:400px;" src="img/portfolio/unexpt.jpg" alt="unexpt.jpg">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "design"]'>
+								<a class="overlay" href="img/portfolio/tassimo-coffee.png">
+									<h1>Tassimo Brewer</h1>
+									<h4>A mock ad poster for Tassimo coffee brewers.</h4>
+								</a>
+								<img style="width:400px;" src="img/portfolio/tassimo-coffee.png" alt="tassimo-coffee.png">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "website"]'>
+								<a class="overlay" href="http://tinfoilhat.github.io/tinfoil-sms/">
+									<h1>Tinfoil-SMS</h1>
+									<h4>Logo, icons and web design for Tinfoil-SMS an Android app.</h4>
+								</a>
+								<img style="width:400px;" src="img/portfolio/tinfoilsms.png" alt="tinfoilsms.png">
+							</div>
+
+							<!-- ADD BETTER IMAGE/TITLE LATER -->
+							<div class="portfolio-item" data-groups='["all", "video"]'>
+								<a class="overlay" href="https://dl.dropboxusercontent.com/u/75556154/Zach%27s%20Creative/Centennial%20College/Centennial%20College%20CCC%20Commercial.mp4">
+									<h1></h1>
+									<h4>A mock TV commercial project for Centennial College.</h4>
+								</a>
+								<img style="width:400px;" src="img/portfolio/centtv.png" alt="centtv.png">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "writing"]'>
+								<a class="overlay" href="img/portfolio/mobilexbtc.pdf">
+									<h1>Mobile X</h1>
+									<h4>Bitcoin and Cryptocurrency in Plasic Mobile's Mobile X.</h4>
+								</a>
+								<img style="width:400px;" src="img/portfolio/mobilexbtc.png" alt="mobilexbtc.png">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "design"]'>
+								<a class="overlay" href="http://musclesnmacros.com">
+									<h1>Muscles &amp; Macros Logo</h1>
+									<h4>A logo design for musclesnmacros.com.</h4>
+								</a>
+								<img style="width:400px;" src="img/portfolio/mmlogo.png" alt="mmlogo.png">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "writing"]'>
+								<a class="overlay" href="https://medium.com/toronto-ontario/before-captain-john-db149190a704#.bb67f0vj8">
+									<h1>Before Captian John</h1>
+									<h4>A historical article about the Jadran.</h4>
+								</a>
+								<img style="width:400px;" src="img/portfolio/jadran.jpg" alt="jadran.jpg">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "audio"]'>
+								<a class="overlay" href="https://dl.dropboxusercontent.com/u/75556154/Zach%27s%20Creative/Centennial%20College/JocksSports.mp3">
+									<h1>Jocks Sports Radio</h1>
+									<h4>A mock radio spot for Jocks Sports.</h4>
+								</a>
+								<img style="width:400px;" src="img/portfolio/jocks.jpg" alt="jocks.jpg">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "website"]'>
+								<a class="overlay" href="http://zachjordan.me/TourismWordSalad/">
+									<h1>Tourism Word Salad</h1>
+									<h4>A fun side project that features Google Translate fails.</h4>
+								</a>
+								<img style="width:400px;" src="img/portfolio/tourismwordsalad.png" alt="tourismwordsalad.pn">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "writing"]'>
+								<a class="overlay" href="https://medium.com/kvindek-du-semajnoj-de-esperanton">
+									<h1>52SE</h1>
+									<h4>A weekly personal blog where I post in Esperanto.</h4>
+								</a>
+								<img style="width:400px;" src="img/portfolio/52se.jpg" alt="52se.jpg">
+							</div>
+						</div>
+				</div>
+			</div>
+			<!-- end #portfolio -->
+
+			<!-- begin #blog named "blog" but really it's the About Me -->
+			<div id="blog" class="absolute">
+				<div id="top-blog" class="expand add-expand">
 					<h1>About Me</h1>
 					<div class="detail">All About Me</div>
 					<div class="icon icon-left fa fa-child"></div>
 				</div>
 				<div class="main-content">
-					<a href="#top-portfolio" class="close-icon expand"></a>
+					<a href="#top-blog" class="close-icon expand"></a>
 					<div class="col-md-12">
 						<h1 class="title">About Zach</h1>
 						<img class="blog-img" src="img/about-zach.jpg" title="This is Zach in SFO" alt="About Zach Image">
@@ -306,112 +420,6 @@
 								<div class="quoter">Admin</div>
 							</div>
 						</div> -->
-						<div class="interaction"></div>
-					</div>
-				</div>
-			</div>
-
-			<!-- begin #blog -->
-			<div id="blog" class="absolute">
-				<div id="top-blog" class="expand add-expand">
-					<h1>Blog</h1>
-					<div class="detail">Read My Thoughts</div>
-					<div class="icon icon-left fa fa-pencil"></div>
-				</div>
-				<div class="main-content">
-					<a href="#top-blog" class="close-icon expand"></a>
-					<h1 class="title">Latest Blog Posts</h1>
-					<div class="blog-row row">
-						<div id="blog-list-container" class="col-md-12">
-
-							<!-- begin #blog-item -->
-							<div class="col-md-5">
-								<div class="blog-item">
-									<a class="overlay" target="_blank" href="https://medium.com/toronto-ontario/a-letter-of-love-to-the-srt-379cc191bd5c#.w78wi8pdc" title="Read A Love Letter to The SRT">
-										<h1>Read It</h1>
-									</a>
-									<img src="img/blog/1.jpg" title="Read A Love Letter to The SRT" alt="A Love Letter to The SRT Thumbnail">
-									<div class="detail row">
-										<div class="date">
-											<span>08</span>
-											<span>Jan</span>
-										</div>
-										<div class="like">
-											<span class="fa fa-heart"></span>
-											<span>2</span>
-										</div>
-										<div class="blog-title">A Love Letter to The SRT<br>- Satire -</div>
-									</div>
-								</div>
-							</div>
-							<!-- end #blog-item -->
-
-							<!-- begin #blog-item -->
-							<div class="col-md-5">
-								<div class="blog-item">
-									<a class="overlay" target="_blank" href="https://medium.com/@thatotherzach/unexpected-encounters-679756eb7f31#.slv25kx40" title="Read Unexpected Encounters">
-										<h1>Read It</h1>
-									</a>
-									<img src="img/blog/2.jpg" title="Read Unexpected Encounters" alt="Unexpected Encounters Thumbnail">
-									<div class="detail row">
-										<div class="date">
-											<span>20</span>
-											<span>Sep</span>
-										</div>
-										<div class="like">
-											<span class="fa fa-heart"></span>
-											<span>1</span>
-										</div>
-										<div class="blog-title">Unexpected Encounters<br>- Short Story -</div>
-									</div>
-								</div>
-							</div>
-							<!-- end #blog-item -->
-
-							<!-- begin #blog-item -->
-							<div class="col-md-5">
-								<div class="blog-item">
-									<a class="overlay" target="_blank" href="https://medium.com/kvindek-du-semajnoj-de-esperanton" title="Legas Kvindek Du Semajnoj De Esperanto">
-										<h1>Read It</h1>
-									</a>
-									<img src="img/blog/3.jpg" title="Legas Kiu Estas Vi Iros Nomi" alt="Kiu Estas Vi Iros Nomi Thumbnail">
-									<div class="detail row">
-										<div class="date">
-											<span>14</span>
-											<span>Feb</span>
-										</div>
-										<div class="like">
-											<span class="fa fa-heart"></span>
-											<span>0</span>
-										</div>
-										<div class="blog-title">Kvindek Du Semajnoj de Esperanto</div>
-									</div>
-								</div>
-							</div>
-							<!-- end #blog-item -->
-
-							<!-- begin #blog-item -->
-							<div class="col-md-5">
-								<div class="blog-item">
-									<a class="overlay" target="_blank" href="https://medium.com/toronto-ontario/before-captain-john-db149190a704#.fqrudp3au" title="Read Before Captian John">
-										<h1>Read It</h1>
-									</a>
-									<img src="img/blog/4.jpg" title="Read Before Captian John" alt="Before Captian John Thumbnail">
-									<div class="detail row">
-										<div class="date">
-											<span>24</span>
-											<span>May</span>
-										</div>
-										<div class="like">
-											<span class="fa fa-heart"></span>
-											<span>5</span>
-										</div>
-										<div class="blog-title">Before Captian John<br>- Local History -</div>
-									</div>
-								</div>
-							</div>
-							<!-- end #blog-item -->
-						</div>
 					</div>
 				</div>
 			</div>
