--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 			</div>
 			<!-- end #resume -->
 
-						<!-- begin #portfolio -->
+			<!-- begin #portfolio -->
 			<div id="portfolio" class="absolute">
 				<div id="top-portfolio" class="expand add-expand">
 					<h1>Portfolio</h1>
@@ -297,92 +297,91 @@
 						<div id="portfolio-container">
 
 							<div class="portfolio-item" data-groups='["all", "design"]'>
-								<a class="overlay" href="img/portfolio/hammer.png">
+								<a class="overlay" href="Hammer.html">
 									<h1>Hammer</h1>
-									<h4>A simple graphic about why creatives are the hammer of an agency.</h4>
+									<h4>Why creatives are the hammer of an agency</h4>
 								</a>
-								<img style="width:400px;" src="img/portfolio/hammer.png" alt="Hammer.png">
+								<img src="img/portfolio/hammer-sm.png" alt="Hammer.png">
 							</div>
 
 							<div class="portfolio-item" data-groups='["all", "writing"]'>
-								<a class="overlay" href="https://medium.com/@thatotherzach/unexpected-encounters-679756eb7f31#.j6bodg5rk">
+								<a class="overlay" target="_blank" href="https://medium.com/@thatotherzach/unexpected-encounters-679756eb7f31#.j6bodg5rk">
 									<h1>Unexpected Encounters</h1>
-									<h4>A short story I wrote.</h4>
+									<h4>A short story I wrote</h4>
 								</a>
-								<img style="width:400px;" src="img/portfolio/unexpt.jpg" alt="unexpt.jpg">
+								<img src="img/portfolio/unexpt.png" alt="unexpt.png">
 							</div>
 
 							<div class="portfolio-item" data-groups='["all", "design"]'>
-								<a class="overlay" href="img/portfolio/tassimo-coffee.png">
+								<a class="overlay" href="Tassimo Coffee.html">
 									<h1>Tassimo Brewer</h1>
-									<h4>A mock ad poster for Tassimo coffee brewers.</h4>
+									<h4>A mock ad poster for Tassimo coffee brewers</h4>
 								</a>
-								<img style="width:400px;" src="img/portfolio/tassimo-coffee.png" alt="tassimo-coffee.png">
+								<img src="img/portfolio/tassimo-coffee-sm.png" alt="tassimo-coffee-sm.png">
 							</div>
 
-							<div class="portfolio-item" data-groups='["all", "website"]'>
-								<a class="overlay" href="http://tinfoilhat.github.io/tinfoil-sms/">
+							<div class="portfolio-item" data-groups='["all", "website", "design"]'>
+								<a class="overlay" target="_blank" href="http://tinfoilhat.github.io/tinfoil-sms/">
 									<h1>Tinfoil-SMS</h1>
-									<h4>Logo, icons and web design for Tinfoil-SMS an Android app.</h4>
+									<h4>Graphic &amp; web design for Tinfoil-SMS Android app</h4>
 								</a>
-								<img style="width:400px;" src="img/portfolio/tinfoilsms.png" alt="tinfoilsms.png">
+								<img src="img/portfolio/tinfoilsms.png" alt="tinfoilsms.png">
 							</div>
 
-							<!-- ADD BETTER IMAGE/TITLE LATER -->
 							<div class="portfolio-item" data-groups='["all", "video"]'>
-								<a class="overlay" href="https://dl.dropboxusercontent.com/u/75556154/Zach%27s%20Creative/Centennial%20College/Centennial%20College%20CCC%20Commercial.mp4">
-									<h1></h1>
-									<h4>A mock TV commercial project for Centennial College.</h4>
+								<a class="overlay" href="Centennial College.html">
+									<h1>Centennial Ad</h1>
+									<h4>A commercial project for Centennial College</h4>
 								</a>
-								<img style="width:400px;" src="img/portfolio/centtv.png" alt="centtv.png">
+								<img src="img/portfolio/centtv-sm.png" alt="centtv-sm.png">
 							</div>
 
 							<div class="portfolio-item" data-groups='["all", "writing"]'>
-								<a class="overlay" href="img/portfolio/mobilexbtc.pdf">
+								<a class="overlay" href="Bitcoin.html">
 									<h1>Mobile X</h1>
-									<h4>Bitcoin and Cryptocurrency in Plasic Mobile's Mobile X.</h4>
+									<h4>Bitcoin cryptocurrency in Plasic Mobile's Mobile X</h4>
 								</a>
-								<img style="width:400px;" src="img/portfolio/mobilexbtc.png" alt="mobilexbtc.png">
+								<img src="img/portfolio/mobilexbtc-sm.png" alt="mobilexbtc-sm.png">
 							</div>
 
 							<div class="portfolio-item" data-groups='["all", "design"]'>
-								<a class="overlay" href="http://musclesnmacros.com">
+								<a class="overlay" target="_blank" href="http://musclesnmacros.com">
 									<h1>Muscles &amp; Macros Logo</h1>
-									<h4>A logo design for musclesnmacros.com.</h4>
+									<h4>A logo design for musclesnmacros.com</h4>
 								</a>
-								<img style="width:400px;" src="img/portfolio/mmlogo.png" alt="mmlogo.png">
+								<img src="img/portfolio/mmlogo.png" alt="mmlogo.png">
 							</div>
 
 							<div class="portfolio-item" data-groups='["all", "writing"]'>
-								<a class="overlay" href="https://medium.com/toronto-ontario/before-captain-john-db149190a704#.bb67f0vj8">
+								<a class="overlay" target="_blank" href="https://medium.com/toronto-ontario/before-captain-john-db149190a704#.bb67f0vj8">
 									<h1>Before Captian John</h1>
-									<h4>A historical article about the Jadran.</h4>
+									<h4>A historical article about the Jadran</h4>
 								</a>
-								<img style="width:400px;" src="img/portfolio/jadran.jpg" alt="jadran.jpg">
+								<img src="img/portfolio/jadran.png" alt="jadran.png">
 							</div>
 
 							<div class="portfolio-item" data-groups='["all", "audio"]'>
-								<a class="overlay" href="https://dl.dropboxusercontent.com/u/75556154/Zach%27s%20Creative/Centennial%20College/JocksSports.mp3">
+								<a class="overlay" href="Jocks Sports.html">
 									<h1>Jocks Sports Radio</h1>
-									<h4>A mock radio spot for Jocks Sports.</h4>
+									<h4>A mock radio spot for Jocks Sports</h4>
 								</a>
-								<img style="width:400px;" src="img/portfolio/jocks.jpg" alt="jocks.jpg">
+								<img src="img/portfolio/jocks.png" alt="jocks.png">
 							</div>
 
 							<div class="portfolio-item" data-groups='["all", "website"]'>
-								<a class="overlay" href="http://zachjordan.me/TourismWordSalad/">
+								<a class="overlay" target="_blank" href="http://zachjordan.me/TourismWordSalad">
 									<h1>Tourism Word Salad</h1>
-									<h4>A fun side project that features Google Translate fails.</h4>
+									<h4>A fun side project that features Google Translate fails</h4>
 								</a>
-								<img style="width:400px;" src="img/portfolio/tourismwordsalad.png" alt="tourismwordsalad.pn">
+								<img src="img/portfolio/tourismwordsalad.png" alt="tourismwordsalad.png">
 							</div>
 
 							<div class="portfolio-item" data-groups='["all", "writing"]'>
-								<a class="overlay" href="https://medium.com/kvindek-du-semajnoj-de-esperanton">
+								<a class="overlay" target="_blank" href="https://medium.com/kvindek-du-semajnoj-de-esperanton">
 									<h1>52SE</h1>
-									<h4>A weekly personal blog where I post in Esperanto.</h4>
+									<h4>A weekly personal blog where I post in Esperanto</h4>
 								</a>
-								<img style="width:400px;" src="img/portfolio/52se.jpg" alt="52se.jpg">
+								<img src="img/portfolio/52se.png" alt="52se.png">
 							</div>
 						</div>
 				</div>
