Added latest work to the portfolio.

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 							<div class="portfolio-item" data-groups='["all", "design"]'>
 								<a class="overlay" target="_blank" href="http://musclesnmacros.com">
 									<h1>Muscles &amp; Macros Logo</h1>
-									<h4>A logo design for musclesnmacros.com</h4>
+									<h4>Logo design for musclesnmacros.com</h4>
 								</a>
 								<img src="img/portfolio/mmlogo.png" alt="mmlogo.png">
 							</div>
@@ -382,6 +382,14 @@
 									<h4>A weekly personal blog where I post in Esperanto</h4>
 								</a>
 								<img src="img/portfolio/52se.png" alt="52se.png">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "design"]'>
+								<a class="overlay" href="Lost Palette.html">
+									<h1>Lost Palette</h1>
+									<h4>Logo design for thelostpalette.com</h4>
+								</a>
+								<img src="img/portfolio/tlp-sm.png" alt="52se.png">
 							</div>
 						</div>
 				</div>
