Added new item to portfolio, SFP. Changed order of portfolio items as well.

--- a/index.html
+++ b/index.html
@@ -296,38 +296,6 @@
 
 						<div id="portfolio-container">
 
-							<div class="portfolio-item" data-groups='["all", "design"]'>
-								<a class="overlay" href="Hammer.html">
-									<h1>Hammer</h1>
-									<h4>Why creatives are the hammer of an agency</h4>
-								</a>
-								<img src="img/portfolio/hammer-sm.png" alt="Hammer.png">
-							</div>
-
-							<div class="portfolio-item" data-groups='["all", "writing"]'>
-								<a class="overlay" target="_blank" href="https://medium.com/@thatotherzach/unexpected-encounters-679756eb7f31#.j6bodg5rk">
-									<h1>Unexpected Encounters</h1>
-									<h4>A short story I wrote</h4>
-								</a>
-								<img src="img/portfolio/unexpt.png" alt="unexpt.png">
-							</div>
-
-							<div class="portfolio-item" data-groups='["all", "design"]'>
-								<a class="overlay" href="Tassimo Coffee.html">
-									<h1>Tassimo Brewer</h1>
-									<h4>A mock ad poster for Tassimo coffee brewers</h4>
-								</a>
-								<img src="img/portfolio/tassimo-coffee-sm.png" alt="tassimo-coffee-sm.png">
-							</div>
-
-							<div class="portfolio-item" data-groups='["all", "website", "design"]'>
-								<a class="overlay" target="_blank" href="http://tinfoilhat.github.io/tinfoil-sms/">
-									<h1>Tinfoil-SMS</h1>
-									<h4>Graphic &amp; web design for Tinfoil-SMS Android app</h4>
-								</a>
-								<img src="img/portfolio/tinfoilsms.png" alt="tinfoilsms.png">
-							</div>
-
 							<div class="portfolio-item" data-groups='["all", "video"]'>
 								<a class="overlay" href="Centennial College.html">
 									<h1>Centennial Ad</h1>
@@ -336,28 +304,20 @@
 								<img src="img/portfolio/centtv-sm.png" alt="centtv-sm.png">
 							</div>
 
-							<div class="portfolio-item" data-groups='["all", "writing"]'>
-								<a class="overlay" href="Bitcoin.html">
-									<h1>Mobile X</h1>
-									<h4>Bitcoin cryptocurrency in Plasic Mobile's Mobile X</h4>
+							<div class="portfolio-item" data-groups='["all", "video"]'>
+								<a class="overlay" href="sfp.html">
+									<h1>SFP</h1>
+									<h4>Short Film Projects</h4>
 								</a>
-								<img src="img/portfolio/mobilexbtc-sm.png" alt="mobilexbtc-sm.png">
+								<img src="img/portfolio/sfps.png" alt="sfps.png">
 							</div>
 
 							<div class="portfolio-item" data-groups='["all", "design"]'>
-								<a class="overlay" target="_blank" href="http://musclesnmacros.com">
-									<h1>Muscles &amp; Macros Logo</h1>
-									<h4>Logo design for musclesnmacros.com</h4>
+								<a class="overlay" href="Tassimo Coffee.html">
+									<h1>Tassimo Brewer</h1>
+									<h4>A mock ad poster for Tassimo coffee brewers</h4>
 								</a>
-								<img src="img/portfolio/mmlogo.png" alt="mmlogo.png">
-							</div>
-
-							<div class="portfolio-item" data-groups='["all", "writing"]'>
-								<a class="overlay" target="_blank" href="https://medium.com/toronto-ontario/before-captain-john-db149190a704#.bb67f0vj8">
-									<h1>Before Captian John</h1>
-									<h4>A historical article about the Jadran</h4>
-								</a>
-								<img src="img/portfolio/jadran.png" alt="jadran.png">
+								<img src="img/portfolio/tassimo-coffee-sm.png" alt="tassimo-coffee-sm.png">
 							</div>
 
 							<div class="portfolio-item" data-groups='["all", "audio"]'>
@@ -376,12 +336,44 @@
 								<img src="img/portfolio/tourismwordsalad.png" alt="tourismwordsalad.png">
 							</div>
 
+							<div class="portfolio-item" data-groups='["all", "website", "design"]'>
+								<a class="overlay" target="_blank" href="http://tinfoilhat.github.io/tinfoil-sms/">
+									<h1>Tinfoil-SMS</h1>
+									<h4>Graphic &amp; web design for Tinfoil-SMS Android app</h4>
+								</a>
+								<img src="img/portfolio/tinfoilsms.png" alt="tinfoilsms.png">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "writing"]'>
+								<a class="overlay" href="Bitcoin.html">
+									<h1>Mobile X</h1>
+									<h4>Bitcoin cryptocurrency in Plasic Mobile's Mobile X</h4>
+								</a>
+								<img src="img/portfolio/mobilexbtc-sm.png" alt="mobilexbtc-sm.png">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "writing"]'>
+								<a class="overlay" target="_blank" href="https://medium.com/toronto-ontario/before-captain-john-db149190a704#.bb67f0vj8">
+									<h1>Before Captian John</h1>
+									<h4>A historical article about the Jadran</h4>
+								</a>
+								<img src="img/portfolio/jadran.png" alt="jadran.png">
+							</div>
+
 							<div class="portfolio-item" data-groups='["all", "writing"]'>
 								<a class="overlay" target="_blank" href="https://medium.com/kvindek-du-semajnoj-de-esperanton">
 									<h1>52SE</h1>
 									<h4>A weekly personal blog where I post in Esperanto</h4>
 								</a>
 								<img src="img/portfolio/52se.png" alt="52se.png">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "writing"]'>
+								<a class="overlay" target="_blank" href="https://medium.com/@thatotherzach/unexpected-encounters-679756eb7f31#.j6bodg5rk">
+									<h1>Unexpected Encounters</h1>
+									<h4>A short story I wrote</h4>
+								</a>
+								<img src="img/portfolio/unexpt.png" alt="unexpt.png">
 							</div>
 
 							<div class="portfolio-item" data-groups='["all", "design"]'>
@@ -391,6 +383,23 @@
 								</a>
 								<img src="img/portfolio/tlp-sm.png" alt="52se.png">
 							</div>
+
+							<div class="portfolio-item" data-groups='["all", "design"]'>
+								<a class="overlay" target="_blank" href="http://musclesnmacros.com">
+									<h1>Muscles &amp; Macros Logo</h1>
+									<h4>Logo design for musclesnmacros.com</h4>
+								</a>
+								<img src="img/portfolio/mmlogo.png" alt="mmlogo.png">
+							</div>
+
+							<div class="portfolio-item" data-groups='["all", "design"]'>
+								<a class="overlay" href="Hammer.html">
+									<h1>Hammer</h1>
+									<h4>Why creatives are the hammer of an agency</h4>
+								</a>
+								<img src="img/portfolio/hammer-sm.png" alt="Hammer.png">
+							</div>
+
 						</div>
 				</div>
 			</div>
