--- a/Tassimo Coffee.html
+++ b/Tassimo Coffee.html
@@ -91,6 +91,7 @@
 					<li><a href="https://www.instagram.com/thatotherzach/" target="_blank" title="Insta Zach" class="fa fa-instagram"></a></li>
 					<li><a href="https://twitter.com/ThatOtherZac" target="_blank" title="Tweets by Zach" class="fa fa-twitter"></a></li>
 					<li><a href="http://ca.linkedin.com/in/thezachjordan" target="_blank" title="Professional Zach" class="fa fa-linkedin"></a></li>
+					<li><a href="https://www.youtube.com/c/zacj" target="_blank" title="Zach on YouTube" class="fa fa-youtube"></a></li>
 					<li><a href="https://github.com/TXTCLASS" target="_blank" title="Zach's Code" class="fa fa-github"></a></li>
 				</ul>
 			</div>
